--- a/app.json
+++ b/app.json
@@ -1,63 +1,42 @@
 {
-  "name": "TG File Share/Sharing Bot",
-  "description": "file sharing bot store posts and it can access by special links",
+  "name": "Anime News Bot",
+  "description": "A bot that fetches and shares anime news from RSS feeds.",
   "keywords": [
     "telegram",
-    "file",
-    "sharing"
+    "anime",
+    "news",
+    "rss"
   ],
-  "repository": "https://github.com/CodeXBotz/File-Sharing-Bot",
-  "logo": "https://ibb.co/FgPVtzw",
+  "repository": "https://github.com/yourusername/AnimeNewsBot",
+  "logo": "https://yourlogo.url/logo.png",
   "env": {
-    "TG_BOT_TOKEN": {
-      "description": "Your Bot token, Get it from @Botfather",
+    "TELEGRAM_TOKEN": {
+      "description": "Your Telegram Bot token from @BotFather",
       "value": ""
+    },
+    "CHANNEL_ID": {
+      "description": "Your Telegram channel ID to send news.",
+      "value": ""
+    },
+    "RSS_URL": {
+      "description": "RSS feed URL for fetching anime news.",
+      "value": ""
+    },
+    "DB_NAME": {
+      "description": "Database name for MongoDB.",
+      "value": "anime_news"
     },
     "OWNER_ID": {
-      "description": "An integer of consisting of your owner ID",
+      "description": "Your owner ID.",
       "value": "1250450587"
     },
-    "APP_ID":{
-      "description": "your app id, take it from my.telegram.org",
-      "value": ""
-    },
-    "DATABASE_URL": {
-      "description": "Paste your mongo db url",
-      "value": "url"
-    },
-    "DATABASE_NAME":{
-      "description": "Enter your DATABASE_NAME ",
-      "value": "filesharexbot"
-    },
-    "API_HASH":{
-      "description": "your api hash, take it from my.telegram.org",
-      "value": ""
-    },
-    "CHANNEL_ID":{
-      "description": "make a channel (database channel), then make the bot as admin in channel, and it's id",
-      "value": "-100"
-    },
-    "FORCE_SUB_CHANNEL":{
-      "description": "id of the channel or group, if you want enable force sub feature else put 0",
+    "FORCE_SUB_CHANNEL": {
+      "description": "ID of the channel to enforce subscription, else put 0.",
       "value": "0"
     },
     "START_MESSAGE": {
-      "description": "Optional: start message of bot, use HTML parsemode format",
-      "value": "Hello {first}\n\nI can store private files in Specified Channel and other users can access it from special link."
-    },
-    "FORCE_SUB_MESSAGE": {
-      "description": "Optional: Force Sub message of bot, use HTML parsemode format",
-      "value": "Hello {first}\n\n<b>You need to join in my Channel/Group to use me\n\nKindly Please join Channel</b>"
-    },
-    "ADMINS": {
-      "description": "A space separated list of user_ids of Admins, they can only create links",
-      "value": "",
-      "required": false
-    },
-    "PROTECT_CONTENT": {
-      "description": "Protect contents from getting forwarded",
-      "value": "False",
-      "required": false
+      "description": "Optional: start message of the bot.",
+      "value": "Welcome to Anime News Bot! You will receive the latest anime news here."
     }
   },
   "buildpacks": [
@@ -72,4 +51,3 @@
     }
   }
 }
-
